force-app/main/default/objects/EnrollmentNew__c/EnrollmentNew__c.object-meta.xml
<CustomObject>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>