force-app/main/default/objects/EnrollmentNew__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>Net_Payable_Amount__c -  Total_Deposited_Aount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>