force-app/main/default/objects/EnrollmentNew__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course</label>
    <referenceTo>CourseNew__c</referenceTo>
    <relationshipLabel>Enrollment</relationshipLabel>
    <relationshipName>Enrollment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>