force-app/main/default/objects/EnrollmentNew__c/fields/Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Registration__c</fullName>
    <label>Date of Registration</label>
    <required>true</required>
    <type>Date</type>
</CustomField>