force-app/main/default/objects/EnrollmentNew__c/fields/Net_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable_Amount__c</fullName>
    <formula>Fees__c  -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>