force-app/main/default/objects/EnrollmentNew__c/fields/Total_Deposited_Aount__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposited_Aount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Deposited Aount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>